<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_dialog"
    tools:context=".ui.auth.RegisterFragment">

<!--    <TextView-->
<!--        android:id="@+id/tv_signup"-->
<!--        style="@style/title_style"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:text="@string/sign_up"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/username_container"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        app:boxCornerRadiusBottomEnd="30dp"-->
<!--        app:boxCornerRadiusBottomStart="30dp"-->
<!--        app:boxCornerRadiusTopEnd="30dp"-->
<!--        app:boxCornerRadiusTopStart="30dp"-->
<!--        app:errorEnabled="true"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tv_signup">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/et_username"-->
<!--            style="@style/regular_style"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/username" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/email_container"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        app:boxCornerRadiusBottomEnd="30dp"-->
<!--        app:boxCornerRadiusBottomStart="30dp"-->
<!--        app:boxCornerRadiusTopEnd="30dp"-->
<!--        app:boxCornerRadiusTopStart="30dp"-->
<!--        app:errorEnabled="true"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/username_container">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/et_email"-->
<!--            style="@style/regular_style"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/email" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/password_container"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        app:boxCornerRadiusBottomEnd="30dp"-->
<!--        app:boxCornerRadiusBottomStart="30dp"-->
<!--        app:boxCornerRadiusTopEnd="30dp"-->
<!--        app:boxCornerRadiusTopStart="30dp"-->
<!--        app:errorEnabled="true"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/email_container"-->
<!--        app:passwordToggleEnabled="true">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/et_passowrd"-->
<!--            style="@style/regular_style"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/password"-->
<!--            android:inputType="textPassword" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/confirm_password_container"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        app:boxCornerRadiusBottomEnd="30dp"-->
<!--        app:boxCornerRadiusBottomStart="30dp"-->
<!--        app:boxCornerRadiusTopEnd="30dp"-->
<!--        app:boxCornerRadiusTopStart="30dp"-->
<!--        app:errorEnabled="true"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/password_container"-->
<!--        app:passwordToggleEnabled="true">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/et_confirm_passowrd"-->
<!--            style="@style/regular_style"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/confirm_password"-->
<!--            android:inputType="textPassword" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/btn_signup"-->
<!--        style="@style/regular_style"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:enabled="false"-->
<!--        android:text="@string/sign_up"-->
<!--        android:textAllCaps="true"-->
<!--        app:cornerRadius="30dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/confirm_password_container" />-->

<!--    <View-->
<!--        android:id="@+id/separator"-->
<!--        android:layout_width="370dp"-->
<!--        android:layout_height="1dp"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:background="@color/transparent"-->
<!--        app:layout_constraintEnd_toEndOf="@id/btn_signup"-->
<!--        app:layout_constraintStart_toStartOf="@id/btn_signup"-->
<!--        app:layout_constraintTop_toBottomOf="@id/btn_signup" />-->


<!--    <TextView-->
<!--        android:id="@+id/tv_dont_have_account"-->
<!--        style="@style/regular_style"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:paddingBottom="16dp"-->
<!--        android:text="@string/alredy_have_an_account"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/separator" />-->

<!--    <TextView-->
<!--        android:id="@+id/btn_sign_in"-->
<!--        style="@style/regular_style"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="4dp"-->
<!--        android:text="@string/signin"-->
<!--        android:textColor="@color/yellow"-->
<!--        app:layout_constraintStart_toEndOf="@id/tv_dont_have_account"-->
<!--        app:layout_constraintTop_toTopOf="@id/tv_dont_have_account" />-->
</androidx.constraintlayout.widget.ConstraintLayout>