<resources>
    <string name="app_name">Berita</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun_daftar">Belum punya akun? Daftar</string>
    <string name="disini">disini</string>
    <string name="signin">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="remember_me">Remember Me</string>
    <string name="or">or</string>
    <string name="img_google">img_google</string>
    <string name="img_facebook">img_facebook</string>
    <string name="img_twitter">img_twitter</string>
    <string name="create_new_one">Create new one</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="alredy_have_an_account">Alredy have an account?</string>
    <string name="selamat_datang">Selamat datang,</string>
    <string name="pantun_satu">Kerja bakti membersihkan kaca\nBersama sama menanam bunga\nJangan malas malasan untuk membaca\nKarena membaca jendela dunia</string>
    <string name="pantun_dua">Kayu dibakar menjadi arang\nSore hari bertemu ica\nBagaimana ilmu datang\nKalau kamu malas membaca</string>
    <string name="pantun_tiga">Pohon pedada di dalam taman\nJadi idaman si anak rusa\nMarilah anakanda marilah teman\nKita membaca sepanjang masa</string>
    <string name="berita_hari_ini">Berita Hari Ini</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="kunjungi">Kunjungi Laman Berita</string>
    <string name="mau_baca_berita_dari_negara_mana_hari_ini">Mau baca berita dari negara mana hari ini?</string>
    <string name="title_activity_login_compose">LoginCompose</string>
</resources>