...
<!--            android:hint="@string/password"-->
<!--            android:inputType="textPassword"-->
<!--            />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/btn_login"-->
<!--        style="@style/regular_style"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:text="@string/signin"-->
<!--        android:textAllCaps="true"-->
...
<!--        android:paddingBottom="16dp"-->
<!--        android:text="@string/don_t_have_an_account"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/ic_google" />-->

<!--    <TextView-->
<!--        android:id="@+id/btn_register"-->
<!--        style="@style/regular_style"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="4dp"-->
<!--        android:text="@string/create_new_one"-->
<!--        android:textColor="@color/yellow"-->
...
